# UdemyCppUnitTestingGoogleTestAndGoogleMock

./: README.md
001SampleGTestProject/: CMakeLists.txt  main.cpp
001SampleGTestProject/MyMathLib/: MyMathLib.cpp  MyMathLib.h
001SampleGTestProject/src/: main.cpp
001SampleGTestProject/tests/: test.cpp
002GoogleTestWithLib/LibraryCode/: LibraryCode.cpp  LibraryCode.hpp
002GoogleTestWithLib/src/: main.cpp
002GoogleTestWithLib/tests/: testRunner.cpp
003GoogleTestAAA/: CMakeLists.txt
003GoogleTestAAA/LibraryCode/: LibraryCode.hpp
003GoogleTestAAA/tests/: testRunner.cpp
004GoogleTestAAA_Expect/LibraryCode/: LibraryCode.cpp
004GoogleTestAAA_Expect/tests/: testRunner.cpp
005GoogleTestBadStrings/src/: main.cpp
005GoogleTestBadStrings/tests/: testRunner.cpp
006GoogleTestStringsOK/LibraryCode/: LibraryCode.cpp
006GoogleTestStringsOK/tests/: testRunner.cpp
007GoogleTestExceptions/tests/: testRunner.cpp
008GoogleTestFixtures/: CMakeLists.txt
008GoogleTestFixtures/tests/: testRunner.cpp
009GoogleTestParameterizedTests/: CMakeLists.txt
009GoogleTestParameterizedTests/LibraryCode/: LibraryCode.cpp
009GoogleTestParameterizedTests/tests/: testRunner.cpp
010gmockSetup/: CMakeLists.txt
010gmockSetup/src/: main.cpp
010gmockSetup/tests/: testRunner.cpp
011GoogleTestProject_backup_mock_full/: CMakeLists.txt
011GoogleTestProject_backup_mock_full/Libraries/: IDatabaseConnection.cpp  IDatabaseConnection.hpp
011GoogleTestProject_backup_mock_full/tests/: testRunner.cpp
012GoogleMockInvoke_backup/Libraries/: IDatabaseConnection.cpp
012GoogleMockInvoke_backup/src/: main.cpp
012GoogleMockInvoke_backup/tests/: testRunner.cpp
013GoogleTestAssertionsOnVectors/: CMakeLists.txt
013GoogleTestAssertionsOnVectors/tests/: testRunner.cpp
014GoogleMockCallbacks/Libraries/: EmployeeManager.cpp  EmployeeManager.hpp  IDatabaseConnection.cpp  IDatabaseConnection.hpp
014GoogleMockCallbacks/tests/: testRunner.cpp
15GoogleMockPrivateStaticMethods/Libraries/: Employee.hpp  IDatabaseConnection.cpp  IDatabaseConnection.hpp
15GoogleMockPrivateStaticMethods/tests/: testRunner.cpp
Resources/GoogleMockInvoke_backup/: CMakeLists.txt  main  testRunner.cpp
Resources/GoogleTestAssertionsOnVectors_backup/: CMakeLists.txt  main.cpp  testRunner.cpp
Resources/GoogleTestBadStrings/: LibraryCode.hpp  main.cpp  testRunner.cpp
Resources/GoogleTestExceptions/: CMakeLists.txt  LibraryCode.cpp  LibraryCode.hpp  testRunner.cpp
Resources/GoogleTestFixtures/GoogleTest-fixtures/: testRunner.cpp
Resources/GoogleTestFixtures/GoogleTest-no-fixtures/: LibraryCode.cpp  LibraryCode.hpp  testRunner.cpp
Resources/GoogleTestParameterizedTests/: LibraryCode.cpp  LibraryCode.hpp  testRunner.cpp
Resources/GoogleTestProject_backup_mock_full/: main.cpp  testRunner.cpp
Resources/GoogleTestStringsOK/: LibraryCode.cpp  testRunner.cpp
Resources/GoogleTestWithLib/: LibraryCode.cpp  main.cpp  testRunner.cpp
Resources/TeachingProject3/: TeachingProject3.sln
Resources/TeachingProject3/MathTestProject/: MathTestProject.vcxproj  test.cpp
Resources/TeachingProject3/MyMathLib/: MyMathLib.cpp  MyMathLib.hpp  MyMathLib.vcxproj  MyMathLib.vcxproj.filters
Resources/TeachingProject3/TeachingProject3/: TeachingProject3.cpp  TeachingProject3.vcxproj  TeachingProject3.vcxproj.filters
